--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "outDir": "./dist",
     "rootDir": "./"
   },
-  "include": ["src/**/*", "types/**/*"]
+  "include": ["src/**/*", "src/config/types/**/*"]
 }
