--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "ts-node src/index.ts",
+    "dev": "nodemon --watch src --exec ts-node src/index.ts",
     "build": "tsc",
     "commit": "git add . && cz && git push",
     "check": "git fetch && git pull && npm i",
@@ -24,6 +25,7 @@
     "@types/node-telegram-bot-api": "^0.64.6",
     "@types/sqlite3": "^3.1.11",
     "commitizen": "^4.3.0",
+    "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
